--- a/src/layer1_visual_tools/map_tools/vega-radial-tree-embed-local.html
+++ b/src/layer1_visual_tools/map_tools/vega-radial-tree-embed-local.html
@@ -2,21 +2,29 @@
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
+    <style>
+        .fullscreen-chart {
+            position: fixed;
+            top: 10%;
+            left: 25%;
+            /*width: 100vw;*/
+            /*height: 100vh;*/
+            /*overflow: auto;*/
+            /*display: flex;*/
+            /*align-items: center;*/
+            /*background: var(--white-color);*/
+            /*z-index: 15;*/
+        }
+    </style>
 </head>
 <body>
-<code class="language-radial-tree hljs">
-</code>
+<div class="fullscreen-chart">
+    <div id="vis"/>
+</div>
 <script>
-    target = 'language' + '-radial-tree'
-    selected_elements = document.getElementsByClassName(target)
-    if (selected_elements.length) {
-        vegaEmbed(
-            '.' + target,
-            'vega/radial-tree.vg.json'
-        );
-    }
-    else {
-        console.log('not found .' + target)
-    }
+    vegaEmbed(
+        '#vis',
+        'vega/radial-tree.vg.json'
+    );
 </script>
 </body>
