修复数据文件路径问题

--- a/src/layer1_visual_tools/map_tools/vega/collections/pages/rust-tree-embed-local.html
+++ b/src/layer1_visual_tools/map_tools/vega/collections/pages/rust-tree-embed-local.html
@@ -9,7 +9,7 @@
 <script>
     vegaEmbed(
         '#vis',
-        '../../vg_json/rust.tree.vg.json'
+        '../../../../../layer1_visual_tools/map_tools/vega/collections/vg_json/rust.tree.vg.json'
     );
 </script>
 </body>
