修复本地可访问静态资源，但是线上无法访问的问题

--- a/src/collections/pages/rust-tree-embed-local.html
+++ b/src/collections/pages/rust-tree-embed-local.html
@@ -9,7 +9,7 @@
 <script>
     vegaEmbed(
         '#vis',
-        '/collections/vg_json/rust.tree.vg.json'
+        '../../vg_json/rust.tree.vg.json'
     );
 </script>
 </body>
