解决静态资源相对访问地址的问题

--- a/src/collections/pages/rust-tree-embed-local.html
+++ b/src/collections/pages/rust-tree-embed-local.html
@@ -9,8 +9,11 @@
 <script>
     vegaEmbed(
         '#vis',
+        // '/collections/vg_json/rust.tree.vg.json'
         // '../../../collections/vg_json/rust.tree.vg.json'
-        'think-tool-kit/collections/vg_json/rust.tree.vg.json'
+        // 'think-tool-kit/collections/vg_json/rust.tree.vg.json'
+        // '/think-tool-kit/collections/vg_json/rust.tree.vg.json'
+        './collections/vg_json/rust.tree.vg.json'
     );
 </script>
 </body>
