--- a/src/collections/pages/rust-tree-embed-local.html
+++ b/src/collections/pages/rust-tree-embed-local.html
@@ -12,8 +12,8 @@
         // '/collections/vg_json/rust.tree.vg.json'
         // '../../../collections/vg_json/rust.tree.vg.json'
         // 'think-tool-kit/collections/vg_json/rust.tree.vg.json'
-        // '/think-tool-kit/collections/vg_json/rust.tree.vg.json'
-        './collections/vg_json/rust.tree.vg.json'
+        '/think-tool-kit/collections/vg_json/rust.tree.vg.json'
+        // './collections/vg_json/rust.tree.vg.json' // https://kuanhsiaokuo.github.io/think-tool-kit/collections/pages/collections/vg_json/rust.tree.vg.json
     );
 </script>
 </body>
