--- a/src/collections/pages/rust-tree-embed-local.html
+++ b/src/collections/pages/rust-tree-embed-local.html
@@ -9,10 +9,10 @@
 <script>
     vegaEmbed(
         '#vis',
-        // '/collections/vg_json/rust.tree.vg.json'
+        // '/collections/vg_json/rust.tree.vg.json' // https://kuanhsiaokuo.github.io/collections/vg_json/rust.tree.vg.json
         // '../../../collections/vg_json/rust.tree.vg.json'
         // 'think-tool-kit/collections/vg_json/rust.tree.vg.json'
-        '/think-tool-kit/collections/vg_json/rust.tree.vg.json'
+        '/think-tool-kit/collections/vg_json/rust.tree.vg.json' // ☑️ https://kuanhsiaokuo.github.io/think-tool-kit/collections/vg_json/rust.tree.vg.json
         // './collections/vg_json/rust.tree.vg.json' // https://kuanhsiaokuo.github.io/think-tool-kit/collections/pages/collections/vg_json/rust.tree.vg.json
     );
 </script>
