给vega的markdown添加kroki图表渲染功能

--- a/src/collections/pages/rust/ddd/high_performance_computing/high_performance_computing.html
+++ b/src/collections/pages/rust/ddd/high_performance_computing/high_performance_computing.html
@@ -26,6 +26,7 @@
         /*    visibility: visible;*/
         /*}*/
         #vg-tooltip-element{
+            max-width: 800px;
             max-height: 400px;
             overflow-y: scroll;
         }
