--- a/src/collections/pages/rust/ddd/high_performance_computing/high_performance_computing.html
+++ b/src/collections/pages/rust/ddd/high_performance_computing/high_performance_computing.html
@@ -5,7 +5,7 @@
     <script src="https://cdn.jsdelivr.net/npm/marked@3.0.7/marked.min.js"></script>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/default.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
+    <script>hljs.highlightAll();</script>
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/3.0.1/github-markdown.min.css">
     <style>
@@ -66,7 +66,7 @@
         {
             actions: false,
             tooltip: tooltipOptions
-        }
+        },
     );
     setInterval(function () {
         let tooltip = document.getElementById('vg-tooltip-element')
